Refactor server configuration and add user authentication
- Refactor vercel.json to use @vercel/node for builds
- Add bcrypt and jsonwebtoken as dependencies
- Update .env file with privateKey
- Update login.module.css with color changes
- Create userModel.js for user schema
- Create passwordModel.js for password schema
- Update app.js with CORS configuration and routes
- Update Register.jsx and Login.jsx with form submission logic

--- a/client/src/components/loginAndRegisterPage/login.module.css
+++ b/client/src/components/loginAndRegisterPage/login.module.css
@@ -7,7 +7,7 @@
   position: relative;
 }
 .backIcon {
-  color: #fff;
+  color: #11d111;
   cursor: pointer;
   position: absolute;
   top: 10%;
@@ -91,6 +91,7 @@ input{
 }
 
 .loginLink {
+  color: #16a34a;
   margin-top: 20px;
   text-align: center;
   font-size: 1rem;
